<resources>
    <string name="app_name">TravelPlanner</string>
    <string name="filter">Filter</string>
    <string name="open_cities">Open Cities</string>
    <string name="open_flights">Open Flights</string>
    <string name="open_hotels">Open Hotels</string>
    <string name="open_favorites">Open Favorites</string>
    <string name="action_about">About</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_text">Welcome to Travel Planner!</string>
    <string name="splash_text">Travel Planner</string>
    <string name="choose_city">Choose City</string>
    <string name="book_flight">Book Flight</string>
    <string name="book_hotel">Book Hotel</string>
    <string name="favorites">Favorites</string>
    <string name="my_bookings">My Bookings</string>
</resources>
