<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:padding="24dp"
        android:layout_width="match_parent" android:layout_height="wrap_content">

        <EditText android:id="@+id/etName" android:layout_width="match_parent" android:layout_height="wrap_content"
            android:hint="@string/name"/>

        <EditText android:id="@+id/etEmail" android:layout_width="match_parent" android:layout_height="wrap_content"
            android:hint="@string/email" android:inputType="textEmailAddress" android:layout_marginTop="12dp"/>

        <EditText android:id="@+id/etPassword" android:layout_width="match_parent" android:layout_height="wrap_content"
            android:hint="@string/password" android:inputType="textPassword" android:layout_marginTop="12dp"/>

        <Button android:id="@+id/btnSave" android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/register" android:layout_marginTop="20dp"/>
    </LinearLayout>
</ScrollView>
